# hive-metastore-standalone

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
client/: hive_metastore_client.py
client/thrift_autogen/fb303/: FacebookService-remote
client/thrift_autogen/hive_metastore/: ThriftHiveMetastore.py  constants.py  ttypes.py
client/thrift_autogen/hive_metastore/fb303/: ttypes.py
conf/: .pre-commit-config.yaml  core-site.xml  metastore-log4j2.properties  metastore-site.xml  metastore-site.xml.example
hive-metastore-standalone/client/thrift_autogen/: Dockerfile
hive-metastore-standalone/client/thrift_autogen/hive_metastore/: ThriftHiveMetastore-remote
hive-metastore-standalone/client/thrift_autogen/hive_metastore_abstractions/: HiveDatabase.py  HiveTable.py
hive_metastore_standalone/client/: hive_metastore_client.py
hive_metastore_standalone/client/thrift_autogen/: Makefile
hive_metastore_standalone/client/thrift_autogen/hive_metastore/: ThriftHiveMetastore.py  ttypes.py
hive_metastore_standalone/client/thrift_autogen/hive_metastore/fb303/: FacebookService.py
hive_metastore_standalone/client/thrift_autogen/hive_metastore_abstractions/: AbstractHiveEntity.py  HiveDatabase.py  HiveTable.py
hive_metastore_standalone/datasets/: pandas_hive.py
hive_pandas/: dataset.py
