[tool.poetry]
name = "hive_metastore_standalone"
version = "0.1.7"
description = ""
authors = ["Jose Miguel <jmj.noblecilla@gmail.com>"]

packages = [
    { include = "hive_metastore_standalone" },
    { include = "hive_metastore_standalone/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
thrift = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
